--- a/src/app/pages/dashboard/beta/beta.component.html
+++ b/src/app/pages/dashboard/beta/beta.component.html
@@ -150,7 +150,14 @@
         </div>
       </div>
       <div class="card-body">
-        <cui-slider-card></cui-slider-card>
+        <div class="row">
+          <div class="col-lg-6">
+            <cui-slider-card></cui-slider-card>
+          </div>
+          <div class="col-lg-6">
+            <cui-slider-card></cui-slider-card>
+          </div>
+        </div>
       </div>
     </div>
     <div class="card">
