profile app component

--- a/src/app/pages/apps/profile/profile.component.scss
+++ b/src/app/pages/apps/profile/profile.component.scss
@@ -92,7 +92,7 @@
 
   &-message-img {
     border-radius: 3px;
-    //margin: 0 rem(5) rem(10) 0;
+    margin: 0 rem(5) rem(10) 0;
     max-width: rem(200);
   }
 }
