--- a/src/app/components/CleanUIComponents/ProgressCard/progress-card.component.html
+++ b/src/app/components/CleanUIComponents/ProgressCard/progress-card.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="progressCard__line">
-      <nz-progress nzType="line" [nzPercent]="+percent" [nzShowInfo]="false" [nzStrokeWidth]="8" [nzStrokeColor]="dataColor"></nz-progress>
+      <nz-progress nzType="line" [nzPercent]="percent" [nzShowInfo]="false" [nzStrokeWidth]="8" [nzStrokeColor]="dataColor"></nz-progress>
     </div>
     <div class="lineDescr" *ngIf="percent">
       <span>Change</span>
