--- a/src/app/components/LayoutComponents/Footer/footer.component.html
+++ b/src/app/components/LayoutComponents/Footer/footer.component.html
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-sm-6">
           <a href="https://themeforest.net/user/mediatec_software" target="_blank" rel="noopener noreferrer" class="mr-4">
-            <button nz-button nzType="primary">Buy Now 24$</button>
+            <button nz-button nzType="danger">Buy Now 24$</button>
           </a>
         </div>
         <div class="col-sm-6">
