--- a/src/app/layouts/Login/login.component.scss
+++ b/src/app/layouts/Login/login.component.scss
@@ -9,9 +9,17 @@
   background-size: cover;
   transition: background-image 0.4s linear;
 
+  @media (max-width: $sm-max-width) {
+    ::ng-deep {
+      .login-heading {
+        display: none;
+      }
+    }
+  }
+
   &.light {
     ::ng-deep {
-      .title {
+      .login-heading {
         color: $white;
       }
     }
@@ -55,6 +63,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     flex-shrink: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -70,6 +79,10 @@
 .loginNav {
   padding-top: rem(10);
   padding-bottom: rem(10);
+
+  @media screen and (max-width: $sm-max-width) {
+    display: none;
+  }
 }
 
 .navItems {
@@ -126,7 +139,7 @@
   }
 
   @media screen and (max-width: $sm-max-width) {
-    text-align: center;
+    display: none;
   }
 }
 
@@ -142,6 +155,10 @@
 
   @media (max-width: $md-max-width) {
     padding: rem(40) rem(20) rem(40);
+  }
+
+  @media (max-width: $sm-max-width) {
+    padding: rem(40) rem(20) rem(20);
   }
 
   ul {
