--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -2,7 +2,8 @@
     'settings__borderLess': isBorderless,
     'settings__squaredBorders': isSquaredBorders,
     'settings__fixedWidth': isFixedWidth,
-    'settings__menuShadow': isMenuShadow
+    'settings__menuShadow': isMenuShadow,
+    'settings__menuTop': isMenuTop
   }">
   <nz-back-top></nz-back-top>
   <!-- left menu -->
