--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="title">
+<div class="title login-heading">
   <h1>
-    <strong>WELCOME TO CLEAN UI ADMIN TEMPLATES</strong>
+    <strong>WELCOME TO CLEAN UI ANGULAR - ANGULAR NGRX ADMIN TEMPLATE</strong>
   </h1>
   <p>
     Pluggable enterprise-level angular application framework.
@@ -47,14 +47,14 @@
               <label nz-checkbox>
                 Remember me
               </label>
-              <a href routerLink="/user/forgot" class="login-form-forgot pull-right text-primary">Forgot password</a>
+              <a href routerLink="/user/forgot" class="login-form-forgot pull-right utils__link--blue utils__link--underlined">Forgot password</a>
             </div>
             <div class="form-actions">
               <button nz-button nzType="primary" class="width-150">
                 Sign in
               </button>
               <span class="ml-3 register-link">
-                <a href="javascript: void(0);" class="text-primary utils__link--underlined">Register</a>
+                <a href="javascript: void(0);" class="utils__link--blue utils__link--underlined">Register</a>
                 if you don&#39;t have an account
               </span>
             </div>
