--- a/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
@@ -10,25 +10,40 @@
       <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated}"></ng-container>
       <ng-template #menuTpl let-menuDataActivated>
         <ng-container *ngFor="let item of menuDataActivated">
-          <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'">
+          <ng-template #tooltipTpl>
+            {{ item.title }}
+            <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
+          </ng-template>
+          <li
+            nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'"
+            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed ? tooltipTpl : ''"
+          >
             <span>
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
           </li>
-          <li nz-menu-item *ngIf="item.url && item.target">
+          <li
+            nz-menu-item *ngIf="item.url && item.target"
+            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed ? tooltipTpl : ''"
+          >
             <a href={{item.url}} target={{item.target}}>
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
             </a>
           </li>
           <ng-container *ngIf="item.divider">
             <li nz-menu-divider></li>
           </ng-container>
-          <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzSelected]="item.selected" [nzDisabled]="item.disabled">
+          <li
+            nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzSelected]="item.selected" [nzDisabled]="item.disabled"
+            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed ? tooltipTpl : ''"
+          >
             <span>
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
             </span>
           </li>
           <li nz-submenu *ngIf="item.children" [nzOpen]="item.open">
