--- a/src/assets/styles/CleanUI/import/settings.scss
+++ b/src/assets/styles/CleanUI/import/settings.scss
@@ -13,7 +13,7 @@
         padding-right: 0;
       }
 
-      div[class^='style__inner'] {
+      nz-footer .inner {
         margin-right: 0;
       }
     }
@@ -24,7 +24,7 @@
         padding-right: 0;
       }
 
-      div[class^='style__inner'] {
+      nz-footer .inner {
         margin: 0;
       }
     }
