--- a/src/app/components/CleanUIComponents/ProductCard/product-card.component.html
+++ b/src/app/components/CleanUIComponents/ProductCard/product-card.component.html
@@ -12,17 +12,17 @@
   </div>
   <div class="title">
     <a href="javascript: void(0);">{{productCardData.productName}}</a>
-    <div class="price">
-      {{productCardData.productPrice}}
-      <div class="oldPrice">{{productCardData.productOldPrice}}</div>
-    </div>
-    <div class="descr">
-      <div class="sizes">
-        <span nzTitle="Size S" nzPlacement="top" nz-tooltip>S</span>
-        <span nzTitle="Size M" nzPlacement="top" nz-tooltip>M</span>
-        <span nzTitle="Size XL" nzPlacement="top" nz-tooltip>XL</span>
-      </div>
-      {{productCardData.productNote}}
-    </div>
+  </div>
+  <div class="price">
+    {{productCardData.productPrice}}
+    <span class="oldPrice">{{productCardData.productOldPrice}}</span>
+  </div>
+  <div class="sizes">
+    <span nzTitle="Size S" nzPlacement="top" nz-tooltip>S</span>
+    <span nzTitle="Size M" nzPlacement="top" nz-tooltip>M</span>
+    <span nzTitle="Size XL" nzPlacement="top" nz-tooltip>XL</span>
+  </div>
+  <div class="descr">
+    {{productCardData.productNote}}
   </div>
 </div>
