--- a/src/app/pages/ecommerce/products-catalog/products-catalog.component.html
+++ b/src/app/pages/ecommerce/products-catalog/products-catalog.component.html
@@ -1,1 +1,64 @@
-ecommerce/products-catalog
+<div class="card">
+  <div class="card-header">
+    <div class="row">
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="primary"></cui-info-card>
+      </div>
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="default"></cui-info-card>
+      </div>
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="danger"></cui-info-card>
+      </div>
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="default"></cui-info-card>
+      </div>
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="warning"></cui-info-card>
+      </div>
+      <div class="col-lg-2">
+        <cui-info-card form="bordered" type="success"></cui-info-card>
+      </div>
+    </div>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <cui-product-card></cui-product-card>
+      </div>
+    </div>
+  </div>
+</div>
