--- a/src/app/pages/ecommerce/cart/cart.component.html
+++ b/src/app/pages/ecommerce/cart/cart.component.html
@@ -30,12 +30,12 @@
                 </a>
               </td>
               <td>
-                <nz-input-number [(ngModel)]="item.quantity" [nzSize]="'small'" [nzMin]="1" [nzStep]="1"></nz-input-number>
+                <nz-input-number [(ngModel)]="item.quantity" [nzMin]="1" [nzStep]="1"></nz-input-number>
               </td>
               <td>{{item.unitcost}}</td>
               <td>{{item.total}}</td>
               <td>
-                <button nz-button nzSize="small"><i nz-icon type="delete"></i> Remove</button>
+                <button nz-button><i nz-icon type="delete"></i> Remove</button>
               </td>
             </tr>
             </tbody>
