--- a/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
@@ -6,40 +6,106 @@
 </div>
 <div [ngClass]="isLightTheme ? 'navigation light' : 'navigation'">
   <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'horizontal'">
-    <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated}"></ng-container>
-    <ng-template #menuTpl let-menuDataActivated>
-      <ng-container *ngFor="let item of menuDataActivated">
-        <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'">
-          <span>
-            <span class="title">{{item.title}}</span>
-            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-          </span>
-        </li>
-        <li nz-menu-item *ngIf="item.url && item.target">
-          <a href={{item.url}} target={{item.target}}>
-            <span class="title">{{item.title}}</span>
-            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-          </a>
-        </li>
-        <ng-container *ngIf="item.divider">
-          <li nz-menu-divider></li>
-        </ng-container>
-        <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzSelected]="item.selected" [nzDisabled]="item.disabled">
-          <span>
-            <span class="title">{{item.title}}</span>
-            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-          </span>
-        </li>
-        <li nz-submenu *ngIf="item.children">
-          <span title>
-            <span class="title">{{item.title}}</span>
-            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-          </span>
-          <ul>
-            <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children}"></ng-container>
-          </ul>
-        </li>
-      </ng-container>
-    </ng-template>
+    <!-- TODO: menu should work as menuLeft with ngTemplate inheritance, read: https://github.com/NG-ZORRO/ng-zorro-antd/issues/2868)  -->
+    <ng-container *ngFor="let item of menuDataActivated">
+      <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'">
+        <span>
+          <span class="title">{{item.title}}</span>
+          <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+        </span>
+      </li>
+      <li nz-menu-item *ngIf="item.url && item.target">
+        <a href={{item.url}} target={{item.target}}>
+          <span class="title">{{item.title}}</span>
+          <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+          <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+        </a>
+      </li>
+      <li nz-menu-divider *ngIf="item.divider"></li>
+      <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}}
+        [nzSelected]="item.selected" [nzDisabled]="item.disabled">
+        <span>
+          <span class="title">{{item.title}}</span>
+          <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+          <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+        </span>
+      </li>
+      <li nz-submenu *ngIf="item.children">
+        <span title>
+          <span class="title">{{item.title}}</span>
+          <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+        </span>
+        <ul>
+          <ng-container *ngFor="let item of item.children">
+            <li nz-menu-divider *ngIf="item.divider"></li>
+            <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}} [nzSelected]="item.selected"
+              [nzDisabled]="item.disabled">
+              <span>
+                <span class="title">{{item.title}}</span>
+                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+              </span>
+              <!-- level 1-->
+            <li nz-submenu *ngIf="item.children">
+              <span title>
+                <span class="title">{{item.title}}</span>
+                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              </span>
+              <ul>
+                <ng-container *ngFor="let item of item.children">
+                  <li nz-menu-divider *ngIf="item.divider"></li>
+                  <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}}
+                    [nzSelected]="item.selected" [nzDisabled]="item.disabled">
+                    <span>
+                      <span class="title">{{item.title}}</span>
+                      <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                      <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+                    </span>
+                    <!-- level 2 -->
+                  <li nz-submenu *ngIf="item.children">
+                    <span title>
+                      <span class="title">{{item.title}}</span>
+                      <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                    </span>
+                    <ul>
+                      <ng-container *ngFor="let item of item.children">
+                        <li nz-menu-divider *ngIf="item.divider"></li>
+                        <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}}
+                          [nzSelected]="item.selected" [nzDisabled]="item.disabled">
+                          <span>
+                            <span class="title">{{item.title}}</span>
+                            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                            <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+                          </span>
+                          <!-- level 3 -->
+                        <li nz-submenu *ngIf="item.children">
+                          <span title>
+                            <span class="title">{{item.title}}</span>
+                            <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                          </span>
+                          <ul>
+                            <ng-container *ngFor="let item of item.children">
+                              <li nz-menu-divider *ngIf="item.divider"></li>
+                              <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}}
+                                [nzSelected]="item.selected" [nzDisabled]="item.disabled">
+                                <span>
+                                  <span class="title">{{item.title}}</span>
+                                  <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                                  <span *ngIf="item.pro" class="badge badge-primary ml-2 color-white">PRO</span>
+                                </span>
+                              </li>
+                            </ng-container>
+                          </ul>
+                        </li>
+                      </ng-container>
+                    </ul>
+                  </li>
+                </ng-container>
+              </ul>
+            </li>
+          </ng-container>
+        </ul>
+      </li>
+    </ng-container>
   </ul>
 </div>
