--- a/src/app/components/LayoutComponents/TopBar/IssuesHistory/issues-history.component.scss
+++ b/src/app/components/LayoutComponents/TopBar/IssuesHistory/issues-history.component.scss
@@ -8,7 +8,7 @@
   @include transition-slow;
 
   &:after {
-    color: inherit;
+    color: $gray;
     position: absolute;
     top: 50%;
     right: 0;
@@ -23,15 +23,23 @@
     border-right: 0.3em solid transparent;
     border-bottom: 0;
     border-left: 0.3em solid transparent;
+    @include transition-slow();
   }
 
   &:hover {
     color: $blue !important;
+
+    &::after,
+    .icon {
+      color: $gray-darken;
+    }
   }
 }
 
 .icon {
   margin-right: rem(6);
+  color: $gray;
+  @include transition-slow();
 }
 
 .menuIcon {
