--- a/src/app/pages/ecommerce/orders/orders.component.html
+++ b/src/app/pages/ecommerce/orders/orders.component.html
@@ -22,7 +22,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let item of orderTable.data">
+      <tr *ngFor="let item of displayProductsData">
         <td>
           <a href="javascript: void(0);" class="utils__link--underlined">
             #{{item.id}}
@@ -49,7 +49,7 @@
           {{item.quantity}}
         </td>
         <td>
-          <span [ngClass]="[item.status === 'Processing' ? 'badge badge-primary' : 'badge badge-default']">
+          <span [ngClass]="[item.status === 'Processing' ? 'badge badge-primary font-size-12' : 'badge badge-default font-size-12']">
             {{item.status}}
           </span>
         </td>
