--- a/src/app/pages/ecommerce/products-catalog/products-catalog.component.html
+++ b/src/app/pages/ecommerce/products-catalog/products-catalog.component.html
@@ -23,40 +23,40 @@
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="col-xl-4 col-lg-6 col-md-12">
         <cui-product-card></cui-product-card>
       </div>
     </div>
