--- a/src/app/pages/ecommerce/products-list/products-list.component.html
+++ b/src/app/pages/ecommerce/products-list/products-list.component.html
@@ -55,7 +55,7 @@
           {{item.quantity}}
         </td>
         <td>
-          <span [ngClass]="[item.status === 'Disabled' ? 'badge badge-danger' : 'badge badge-success']">
+          <span [ngClass]="[item.status === 'Disabled' ? 'badge badge-danger font-size-12' : 'badge badge-success font-size-12']">
             {{item.status}}
           </span>
         </td>
