--- a/src/assets/styles/Chartist/chartist.cleanui.scss
+++ b/src/assets/styles/Chartist/chartist.cleanui.scss
@@ -1,6 +1,5 @@
 .chartist-tooltip {
   position: absolute;
-  display: inline-block;
   opacity: 0;
   min-width: 5em;
   padding: 0.5em;
@@ -12,6 +11,7 @@
   z-index: 1;
   transition: opacity 0.2s linear;
   border-radius: 2px;
+  display: none;
 }
 .chartist-tooltip:before {
   content: '';
@@ -25,6 +25,7 @@
   border-top-color: #113222;
 }
 .chartist-tooltip.tooltip-show {
+  display: block;
   opacity: 1;
 }
 
