--- a/src/app/pages/youtube/view/view.component.html
+++ b/src/app/pages/youtube/view/view.component.html
@@ -11,7 +11,7 @@
           <img src="assets/images/photos/4.jpeg">
         </div>
         <div class="descr">
-          <div class="card">
+          <div class="block">
             <div class="mb-2">
               <strong>
                 Published on <span>{{viewData.date}}</span>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div>
-          <div class="card">
+          <div class="block">
             <div class="addComment">
               <div class="commentUser">
                 <cui-avatar [size]="50" [src]="viewData.accountImg"></cui-avatar>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <div class="sidebar card">
+      <div class="sidebar block">
         <div class="sidebarHead">
           <strong class="sidebarTitle">Up next</strong>
           <div class="pull-right">
