--- a/src/assets/styles/Antd/import/menu.scss
+++ b/src/assets/styles/Antd/import/menu.scss
@@ -12,7 +12,7 @@
 .ant-menu-vertical.ant-menu-sub,
 .ant-menu-vertical-left.ant-menu-sub,
 .ant-menu-vertical-right.ant-menu-sub {
-  min-width: auto;
+  min-width: 160px;
 }
 
 .ant-menu-dark.ant-menu-submenu-popup {
