product card amendment

--- a/src/app/components/CleanUIComponents/ProductCard/product-card.component.html
+++ b/src/app/components/CleanUIComponents/ProductCard/product-card.component.html
@@ -12,10 +12,10 @@
   </div>
   <div class="title">
     <a href="javascript: void(0);">{{productCardData.productName}}</a>
-  </div>
-  <div class="price">
-    {{productCardData.productPrice}}
-    <span class="oldPrice">{{productCardData.productOldPrice}}</span>
+    <div class="price">
+      {{productCardData.productPrice}}
+      <div class="oldPrice">{{productCardData.productOldPrice}}</div>
+    </div>
   </div>
   <div class="sizes">
     <span nzTitle="Size S" nzPlacement="top" nz-tooltip>S</span>
