--- a/src/app/pages/ecommerce/orders/orders.component.html
+++ b/src/app/pages/ecommerce/orders/orders.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="card-body">
-    <nz-table #orderTable [nzData]="displayOrdersData">
+    <nz-table #orderTable [nzData]="displayProductsData">
       <thead (nzSortChange)="sort($event)" nzSingleSort>
       <tr>
         <th nzShowSort nzSortKey="id">ID</th>
