--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -50,10 +50,10 @@
               <a href routerLink="/user/forgot" class="login-form-forgot pull-right utils__link--blue utils__link--underlined">Forgot password</a>
             </div>
             <div class="form-actions">
-              <button nz-button nzType="primary" class="width-150">
+              <button nz-button nzType="primary" class="width-150 mr-3">
                 Sign in
               </button>
-              <span class="ml-3 register-link">
+              <span class="register-link">
                 <a href="javascript: void(0);" class="utils__link--blue utils__link--underlined">Register</a>
                 if you don&#39;t have an account
               </span>
