--- a/src/app/pages/pages/lockscreen/lockscreen.component.scss
+++ b/src/app/pages/pages/lockscreen/lockscreen.component.scss
@@ -2,14 +2,19 @@
 
 .login {
   height: 100%;
-  width: 100%;
   background-size: cover;
   background-image: url('src/assets/images/photos/1.jpeg');
   display: flex;
   flex-direction: column;
-  padding: rem(40);
+  padding: rem(40) rem(40) rem(80);
   overflow-y: auto;
   flex: 0;
+  transition: background-image 0.4s linear;
+
+  @media (max-width: $sm-max-width) {
+    margin: 0 rem(-10);
+    padding: rem(40) rem(10);
+  }
 
   &.fullscreen {
     position: fixed;
@@ -21,7 +26,7 @@
   }
 
   &.windowed {
-    min-height: 1200px;
+    min-height: rem(800);
   }
 }
 
@@ -32,16 +37,10 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: rem(50);
-
-  @media screen and (max-width: $sm-max-width) {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-  }
 }
 
 .logo {
-  max-width: rem(150);
+  max-width: rem(200);
   max-height: rem(50);
   flex-shrink: 0;
 
@@ -51,29 +50,96 @@
   }
 }
 
+.loginNav {
+  padding-top: rem(10);
+  padding-bottom: rem(10);
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
+}
+
+.navItems {
+  list-style: none;
+  font-size: rem(16);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+
+  @media screen and (max-width: $sm-max-width) {
+    margin-top: rem(10);
+  }
+
+  li {
+    text-transform: uppercase;
+    margin-left: rem(10);
+    margin-right: rem(10);
+    margin-top: rem(5);
+    margin-bottom: rem(5);
+    flex-grow: 1;
+    text-align: center;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    a {
+      color: $white;
+      font-weight: 700;
+
+      &:hover,
+      &:focus {
+        border-bottom: 1px solid rgba($white, 0.4);
+      }
+
+      &.active {
+        border-bottom: 1px solid $white;
+      }
+    }
+  }
+}
+
 .styleControls {
   margin-right: auto;
   margin-left: rem(20);
 
-  @media screen and (max-width: $xxl-max-width) {
+  @media screen and (max-width: $md-max-width) {
     order: 1;
     width: 100%;
     margin-left: 0;
-    margin-top: rem(10);
   }
 
-  @media screen and (max-width: $sm-max-width) {
-    text-align: center;
+  @media (max-width: $sm-max-width) {
+    display: none;
   }
 }
 
-.content {
-  margin: auto;
-  max-width: rem(500);
-  width: 100%;
+.promo {
+  color: $white;
+  text-align: center;
+  max-width: rem(800);
+  margin-bottom: rem(60);
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
+
+  h1 {
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+
+  p {
+    font-size: rem(16);
+  }
 }
 
 .form {
+  max-width: rem(500);
   padding: rem(50) rem(40) rem(20);
   border-radius: 10px;
   overflow: hidden;
@@ -82,7 +148,47 @@
   margin: 0 auto;
 }
 
+.formTitle {
+  font-weight: 700;
+  font-size: rem(20);
+  color: $text-darken-more;
+  margin-bottom: rem(30);
+  text-transform: uppercase;
+}
+
+.footer {
+  padding-top: rem(40);
+}
+
+.footerNav {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  li {
+    margin-top: rem(5);
+    margin-bottom: rem(5);
+    margin-left: rem(10);
+    margin-right: rem(10);
+    text-align: center;
+
+    a {
+      color: $white;
+      text-transform: uppercase;
+
+      &:hover,
+      &:focus,
+      &:active {
+        border-bottom: 1px solid $white;
+      }
+    }
+  }
+}
+
 .user {
   text-align: center;
-  font-size: rem(26);
 }
