--- a/src/app/pages/pages/login-beta/login-beta.component.scss
+++ b/src/app/pages/pages/login-beta/login-beta.component.scss
@@ -7,9 +7,15 @@
   background-image: url('src/assets/images/photos/1.jpeg');
   display: flex;
   flex-direction: column;
-  padding: rem(40);
+  padding: rem(40) rem(40) rem(80);
   overflow-y: auto;
   flex: 0;
+  transition: background-image 0.4s linear;
+
+  @media (max-width: $sm-max-width) {
+    margin: 0 rem(-10);
+    padding: rem(40) rem(10);
+  }
 
   &.fullscreen {
     position: fixed;
@@ -21,7 +27,7 @@
   }
 
   &.windowed {
-    min-height: 1200px;
+    min-height: rem(800);
   }
 }
 
@@ -32,12 +38,6 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: rem(50);
-
-  @media screen and (max-width: $sm-max-width) {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-  }
 }
 
 .logo {
@@ -54,6 +54,10 @@
 .loginNav {
   padding-top: rem(10);
   padding-bottom: rem(10);
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
 }
 
 .navItems {
@@ -102,20 +106,15 @@
   margin-right: auto;
   margin-left: rem(20);
 
-  @media screen and (max-width: $xxl-max-width) {
+  @media screen and (max-width: $md-max-width) {
     order: 1;
     width: 100%;
     margin-left: 0;
-    margin-top: rem(10);
   }
 
-  @media screen and (max-width: $sm-max-width) {
-    text-align: center;
+  @media (max-width: $sm-max-width) {
+    display: none;
   }
-}
-
-.content {
-  margin: auto;
 }
 
 .promo {
@@ -123,6 +122,12 @@
   text-align: center;
   max-width: rem(800);
   margin-bottom: rem(60);
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
 
   h1 {
     text-transform: uppercase;
@@ -135,6 +140,9 @@
 }
 
 .formWrapper {
+  max-width: rem(800);
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -226,4 +234,12 @@
 .sidebarFooter {
   margin-top: auto;
   font-weight: 700;
+}
+
+.register-link {
+  @media (max-width: $md-max-width) {
+    width: 100%;
+    display: block;
+    margin-top: rem(10);
+  }
 }
