--- a/src/app/pages/pages/register/register.component.scss
+++ b/src/app/pages/pages/register/register.component.scss
@@ -2,14 +2,19 @@
 
 .login {
   height: 100%;
-  width: 100%;
   background-size: cover;
   background-image: url('src/assets/images/photos/1.jpeg');
   display: flex;
   flex-direction: column;
-  padding: rem(40);
+  padding: rem(40) rem(40) rem(80);
   overflow-y: auto;
   flex: 0;
+  transition: background-image 0.4s linear;
+
+  @media (max-width: $sm-max-width) {
+    margin: 0 rem(-10);
+    padding: rem(40) rem(10);
+  }
 
   &.fullscreen {
     position: fixed;
@@ -21,7 +26,7 @@
   }
 
   &.windowed {
-    min-height: 1200px;
+    min-height: rem(800);
   }
 }
 
@@ -32,16 +37,10 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: rem(50);
-
-  @media screen and (max-width: $sm-max-width) {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-  }
 }
 
 .logo {
-  max-width: rem(150);
+  max-width: rem(200);
   max-height: rem(50);
   flex-shrink: 0;
 
@@ -54,6 +53,10 @@
 .loginNav {
   padding-top: rem(10);
   padding-bottom: rem(10);
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
 }
 
 .navItems {
@@ -102,20 +105,15 @@
   margin-right: auto;
   margin-left: rem(20);
 
-  @media screen and (max-width: $xxl-max-width) {
+  @media screen and (max-width: $md-max-width) {
     order: 1;
     width: 100%;
     margin-left: 0;
-    margin-top: rem(10);
   }
 
-  @media screen and (max-width: $sm-max-width) {
-    text-align: center;
+  @media (max-width: $sm-max-width) {
+    display: none;
   }
-}
-
-.content {
-  margin: auto;
 }
 
 .promo {
@@ -123,6 +121,12 @@
   text-align: center;
   max-width: rem(800);
   margin-bottom: rem(60);
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (max-width: $sm-max-width) {
+    display: none;
+  }
 
   h1 {
     text-transform: uppercase;
