--- a/src/app/components/LayoutComponents/TopBar/topbar.component.html
+++ b/src/app/components/LayoutComponents/TopBar/topbar.component.html
@@ -8,9 +8,10 @@
   <div class="mr-auto">
     <cui-topbar-live-search></cui-topbar-live-search>
   </div>
-  <a href="https://themeforest.net/user/mediatec_software" target="_blank" rel="noopener noreferrer" class="mr-4 d-none d-sm-inline">
+  <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
+    rel="noopener noreferrer" class="mr-4 d-none d-sm-inline">
     <button nz-button nzType="danger">
-      Buy Now $24
+      Buy Bundle $26
     </button>
   </a>
   <div class="mr-4">
