--- a/src/app/components/LayoutComponents/Footer/footer.component.html
+++ b/src/app/components/LayoutComponents/Footer/footer.component.html
@@ -21,8 +21,9 @@
     <div class="bottom">
       <div class="row">
         <div class="col-sm-6">
-          <a href="https://themeforest.net/user/mediatec_software" target="_blank" rel="noopener noreferrer" class="mr-4">
-            <button nz-button nzType="danger">Buy Now 24$</button>
+          <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
+            rel="noopener noreferrer" class="mr-4">
+            <button nz-button nzType="danger">Buy Bundle 26$</button>
           </a>
         </div>
         <div class="col-sm-6">
