--- a/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
@@ -14,19 +14,15 @@
             {{ item.title }}
             <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
           </ng-template>
-          <li
-            nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'"
-            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''"
-          >
+          <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'" nz-tooltip nzPlacement="right"
+            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
             <span>
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
           </li>
-          <li
-            nz-menu-item *ngIf="item.url && item.target"
-            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''"
-          >
+          <li nz-menu-item *ngIf="item.url && item.target" nz-tooltip nzPlacement="right"
+            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
             <a href={{item.url}} target={{item.target}}>
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
@@ -34,10 +30,9 @@
             </a>
           </li>
           <li nz-menu-divider *ngIf="item.divider"></li>
-          <li
-            nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzSelected]="item.selected" [nzDisabled]="item.disabled"
-            nz-tooltip nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''"
-          >
+          <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}}
+            [nzSelected]="item.selected" [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
+            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
             <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 24}">
               <span class="title">{{item.title}}</span>
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
@@ -50,7 +45,8 @@
               <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
             <ul>
-              <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}"></ng-container>
+              <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}">
+              </ng-container>
             </ul>
           </li>
         </ng-container>
@@ -60,13 +56,9 @@
       <p>
         <strong>More components, more styles, more themes, and premium support!</strong>
       </p>
-      <a
-        href="https://themeforest.net/user/mediatec_software"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="btn btn-sm btn-danger"
-      >
-        Buy Pro 24$
+      <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
+        rel="noopener noreferrer" class="btn btn-sm btn-danger">
+        Buy Bundle 26$
       </a>
     </div>
   </perfect-scrollbar>
