--- a/src/app/components/LayoutComponents/TopBar/LiveSearch/live-search.component.scss
+++ b/src/app/components/LayoutComponents/TopBar/LiveSearch/live-search.component.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   background-color: $white;
-  z-index: 100;
+  z-index: 1200;
   opacity: 0;
   visibility: hidden;
   @include transition-slow;
@@ -58,8 +58,13 @@
   line-height: 1.7;
 
   @media screen and (max-width: $sm-max-width) {
-    padding-left: rem(60);
+    padding-left: rem(30);
     padding-right: rem(30);
+  }
+
+  @media screen and (max-width: $xs-max-width) {
+    padding-left: rem(20);
+    padding-right: rem(20);
   }
 }
 
