--- a/src/app/components/LayoutComponents/Footer/footer.component.html
+++ b/src/app/components/LayoutComponents/Footer/footer.component.html
@@ -23,7 +23,7 @@
         <div class="col-sm-6">
           <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
             rel="noopener noreferrer" class="mr-4">
-            <button nz-button nzType="danger">Buy Bundle 24$</button>
+            <button nz-button nzType="danger">Buy Bundle</button>
           </a>
         </div>
         <div class="col-sm-6">
