--- a/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
@@ -58,7 +58,7 @@
       </p>
       <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
         rel="noopener noreferrer" class="btn btn-sm btn-danger">
-        Buy Bundle 24$
+        Buy Bundle
       </a>
     </div>
   </perfect-scrollbar>
