--- a/src/app/components/LayoutComponents/TopBar/topbar.component.html
+++ b/src/app/components/LayoutComponents/TopBar/topbar.component.html
@@ -11,7 +11,7 @@
   <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
     rel="noopener noreferrer" class="mr-4 d-none d-sm-inline">
     <button nz-button nzType="danger">
-      Buy Bundle 24$
+      Buy Bundle
     </button>
   </a>
   <div class="mr-4">
